Fix overflow issue on mobile

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,6 +2,7 @@ html,
 body {
   padding: 0;
   margin: 0;
+  overflow-x: hidden;
   background-color: #0057FF;
   font-family: Roboto, sans-serif;
   font-size: 1rem;
